; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpiolib-acpi.c_acpi_gpio_irq_handler_evt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpiolib-acpi.c_acpi_gpio_irq_handler_evt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_gpio_event = type { i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @acpi_gpio_irq_handler_evt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_gpio_irq_handler_evt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.acpi_gpio_event*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.acpi_gpio_event*
  store %struct.acpi_gpio_event* %7, %struct.acpi_gpio_event** %5, align 8
  %8 = load %struct.acpi_gpio_event*, %struct.acpi_gpio_event** %5, align 8
  %9 = getelementptr inbounds %struct.acpi_gpio_event, %struct.acpi_gpio_event* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.acpi_gpio_event*, %struct.acpi_gpio_event** %5, align 8
  %12 = getelementptr inbounds %struct.acpi_gpio_event, %struct.acpi_gpio_event* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @acpi_execute_simple_method(i32 %10, i32* null, i32 %13)
  %15 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %15
}

declare dso_local i32 @acpi_execute_simple_method(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
